<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="date_today">Today, January 29</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <!--Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!--Key name for storing location in SharedPreferences -->
    <string name="pref_location_key" translatable="false">location</string>

    <!--Default postal code for location preference -->
    <string name="pref_location_default" translatable="false">92691</string>

    <!--Title for button to show location on a map-->
    <string name="action_show_location_title">Show Location on Map</string>

    <!--Key for button to show location on a map-->
    <string name="action_show_location_key">show_location</string>


    <!--Key name for storing units in SharedPreferences-->
    <string name="pref_units_key" translatable="false">units</string>

    <!--Summary for Units Setting-->
    <string name="pref_units_summary">Units to use for displaying temperature</string>

    <!--Title for Units Setting-->
    <string name="pref_units_title">Temperature Units</string>

    <!--Unit labels to display in Settings menu. For Human eyes only-->
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>

    <!--Unit keys to save in SharedPreferences. For machine eyes only-->
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <!--<string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>-->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

</resources>
