<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="number"
        android:singleLine="true" />

    <ListPreference
        android:title="@string/pref_units_title"
        android:key="@string/pref_units_key"
        android:entries="@array/tempunitentries"
        android:entryValues="@array/tempunitentryvalues"
        android:defaultValue="metric"
        android:summary="@string/pref_units_summary"
        />

</PreferenceScreen>